--- a/theme/templates/demo.html
+++ b/theme/templates/demo.html
@@ -107,6 +107,37 @@
         </div>
     </section>
     
+    <!-- Seção: Dropdown Menu -->
+    <section class="mb-12">
+        <h2 class="text-2xl font-semibold mb-6">Dropdown Menu</h2>
+        
+        <div class="flex flex-wrap gap-6">
+            <!-- Menu básico -->
+            <div class="space-y-3">
+                <h3 class="text-lg font-medium">Menu Básico</h3>
+                {% include "components/dropdown-menu.html" with trigger_text="Meu Perfil" items='[{"type":"item","label":"Perfil","icon":"<svg class=\"size-4\" xmlns=\"http://www.w3.org/2000/svg\" fill=\"none\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"currentColor\"><path stroke-linecap=\"round\" stroke-linejoin=\"round\" d=\"M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z\" /></svg>","href":"/perfil"},{"type":"item","label":"Configurações","icon":"<svg class=\"size-4\" xmlns=\"http://www.w3.org/2000/svg\" fill=\"none\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"currentColor\"><path stroke-linecap=\"round\" stroke-linejoin=\"round\" d=\"M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.324.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 011.37.49l1.296 2.247a1.125 1.125 0 01-.26 1.431l-1.003.827c-.293.24-.438.613-.431.992a6.759 6.759 0 010 .255c-.007.378.138.75.43.99l1.005.828c.424.35.534.954.26 1.43l-1.298 2.247a1.125 1.125 0 01-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.57 6.57 0 01-.22.128c-.331.183-.581.495-.644.869l-.213 1.28c-.09.543-.56.941-1.11.941h-2.594c-.55 0-1.02-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 01-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 01-1.369-.49l-1.297-2.247a1.125 1.125 0 01.26-1.431l1.004-.827c.292-.24.437-.613.43-.992a6.932 6.932 0 010-.255c.007-.378-.138-.75-.43-.99l-1.004-.828a1.125 1.125 0 01-.26-1.43l1.297-2.247a1.125 1.125 0 011.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.087.22-.128.332-.183.582-.495.644-.869l.214-1.281z\" /><path stroke-linecap=\"round\" stroke-linejoin=\"round\" d=\"M15 12a3 3 0 11-6 0 3 3 0 016 0z\" /></svg>","href":"/config"},{"type":"separator"},{"type":"item","label":"Sair","variant":"destructive","icon":"<svg class=\"size-4\" xmlns=\"http://www.w3.org/2000/svg\" fill=\"none\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"currentColor\"><path stroke-linecap=\"round\" stroke-linejoin=\"round\" d=\"M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15M12 9l-3 3m0 0l3 3m-3-3h12.75\" /></svg>","onclick":"alert(\"Logout!\")"}]' %}
+            </div>
+            
+            <!-- Menu com checkbox e radio -->
+            <div class="space-y-3">
+                <h3 class="text-lg font-medium">Com Seleções</h3>
+                {% include "components/dropdown-menu.html" with trigger_text="Preferências" trigger_variant="outline" items='[{"type":"label","text":"Notificações"},{"type":"checkbox","label":"Email","name":"email_notifications","checked":true},{"type":"checkbox","label":"Push","name":"push_notifications"},{"type":"separator"},{"type":"label","text":"Tema"},{"type":"radio","label":"Claro","name":"theme","value":"light","checked":true},{"type":"radio","label":"Escuro","name":"theme","value":"dark"},{"type":"radio","label":"Sistema","name":"theme","value":"system"}]' %}
+            </div>
+            
+            <!-- Menu com submenu -->
+            <div class="space-y-3">
+                <h3 class="text-lg font-medium">Com Submenu</h3>
+                {% include "components/dropdown-menu.html" with trigger_text="Ações" trigger_variant="default" items='[{"type":"item","label":"Novo","icon":"<svg class=\"size-4\" xmlns=\"http://www.w3.org/2000/svg\" fill=\"none\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"currentColor\"><path stroke-linecap=\"round\" stroke-linejoin=\"round\" d=\"M12 4.5v15m7.5-7.5h-15\" /></svg>","shortcut":"⌘N","onclick":"alert(\"Novo item!\")"},{"type":"submenu","label":"Compartilhar","icon":"<svg class=\"size-4\" xmlns=\"http://www.w3.org/2000/svg\" fill=\"none\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"currentColor\"><path stroke-linecap=\"round\" stroke-linejoin=\"round\" d=\"M7.217 10.907a2.25 2.25 0 100 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186l9.566-5.314m-9.566 7.5l9.566 5.314m0 0a2.25 2.25 0 103.935 2.186 2.25 2.25 0 00-3.935-2.186zm0-12.814a2.25 2.25 0 103.935-2.186 2.25 2.25 0 00-3.935 2.186z\" /></svg>","items":[{"type":"item","label":"Email","onclick":"alert(\"Compartilhar por email!\")"},{"type":"item","label":"WhatsApp","onclick":"alert(\"Compartilhar no WhatsApp!\")"},{"type":"separator"},{"type":"item","label":"Copiar Link","onclick":"alert(\"Link copiado!\")"}]},{"type":"separator"},{"type":"item","label":"Excluir","variant":"destructive","icon":"<svg class=\"size-4\" xmlns=\"http://www.w3.org/2000/svg\" fill=\"none\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"currentColor\"><path stroke-linecap=\"round\" stroke-linejoin=\"round\" d=\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\" /></svg>","shortcut":"⌘⌫","onclick":"alert(\"Item excluído!\")"}]' %}
+            </div>
+            
+            <!-- Menu com alinhamento -->
+            <div class="space-y-3">
+                <h3 class="text-lg font-medium">Alinhamento Esquerda</h3>
+                {% include "components/dropdown-menu.html" with trigger_text="Menu" trigger_variant="secondary" align="left" items='[{"type":"item","label":"Opção 1","href":"#"},{"type":"item","label":"Opção 2","href":"#"},{"type":"item","label":"Opção 3","href":"#"}]' %}
+            </div>
+        </div>
+    </section>
+    
     <!-- Seção: Separators -->
     <section class="mb-12">
         <h2 class="text-2xl font-semibold mb-6">Separators</h2>
